--- a/.github/workflows/wasm-release.yml
+++ b/.github/workflows/wasm-release.yml
@@ -132,11 +132,6 @@ jobs:
           git config --global user.name "GitHub Actions"
           git config --global user.email "actions@github.com"
           git tag -a "v$VERSION" -m "Release version $VERSION"
-          git push origin "v$VERSION"
+          git push origin main
+          git push origin --tags
           echo "Release tag v$VERSION created. This will trigger the binary build workflow."
-          
-      - name: Trigger binary build workflow
-        uses: peter-evans/repository-dispatch@v2
-        with:
-          event-type: wasm-release-completed
-          client-payload: '{"version": "${{ steps.set-version.outputs.version }}"}' 
