--- a/.github/workflows/wasm-release.yml
+++ b/.github/workflows/wasm-release.yml
@@ -110,9 +110,12 @@ jobs:
             echo "Updating version in www/package.json to $VERSION..."
             cd www
             jq ".dependencies[\"subconverter-wasm\"] = \"$VERSION\"" package.json > tmp.json && mv tmp.json package.json
+            npm install -g pnpm
+            pnpm i
             git config --global user.name "GitHub Actions"
             git config --global user.email "actions@github.com"
             git add package.json
+            git add pnpm-lock.yaml
             git commit -m "Update subconverter-wasm dependency to $VERSION"
             cd ..
           else
