--- a/.github/workflows/wasm-release.yml
+++ b/.github/workflows/wasm-release.yml
@@ -111,7 +111,7 @@ jobs:
             cd www
             jq ".dependencies[\"subconverter-wasm\"] = \"$VERSION\"" package.json > tmp.json && mv tmp.json package.json
             npm install -g pnpm
-            pnpm i
+            pnpm install --no-frozen-lockfile
             git config --global user.name "GitHub Actions"
             git config --global user.email "actions@github.com"
             git add package.json
